...
  },
  en: {
    // Navigation
    home: "Home",
    create: "Create",
    search: "Search",
    inbox: "Inbox",
    profile: "Profile",
    live: "Live",
    marketplace: "Marketplace",
    explore: "Explore",
    communities: "Communities",
    
...
    quantity: "Quantity",
    add_to_cart: "Add to Cart",
    checkout: "Checkout",
    
    // Users
    followers: "Followers",
    following: "Following",
    follow: "Follow",
    unfollow: "Unfollow",
    // Wonder
    wonder: "Wonder",
    my_wonder: "My Wonder",
    forYou: "For You",
    discover: "Discover",
    wonderers: "Wonderers",
    in_his_wonder: "In their Wonder",
    // News
    news_title: "News",
    news_subtitle: "Local and national info",
...
    inbox: "Bata",
    profile: "Mɔgɔ",
    live: "Dɔnni",
    marketplace: "Sɔrɔ",
    forYou: "I ye",
    discover: "Yira",
    cart: "Panier",
    product: "Fɛn",
    products: "Fɛnw",
    price: "Sɔngɔ",
    quantity: "Dɔgɔ",
    add_to_cart: "Panier ma don",
    checkout: "Tɛmɛn",
...
